# mwps

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  circuit-level-noise-13-0005-s1-pointer.txt  hi.txt  model_pointer.txt  partition_profile_trial_1.profile  pyproject-rational.patch  pyproject-rational.py  pyproject.toml  temp.ipynb  temp.txt  temp1.txt  temp3.txt  temp_test_log.md  temp_test_log.txt  test.sh  test_build.sh  test_check.sh
.github/: requirements-dev.txt
.github/workflows/: wheels.yml
benchmark/matrix_speed/: new_interface.ipynb
slp/: Cargo.toml  Cargo.toml.orig
slp/src/: common.rs  lib.rs  lp.rs  main.rs  solver.rs
slp/src/parser/: grammar.pest  mod.rs
slp/tests/: lp.rs  lp_rat.rs
src/: cli.rs  cluster.rs  decoding_hypergraph.rs  dual_module.rs  dual_module.rs.save  dual_module_paralel.rs  dual_module_parallel.rs  dual_module_parallel.rs.save  dual_module_pq.rs  dual_module_serial.rs  dual_module_serial0.rs.save  example_codes.rs  example_partitions.rs  explore.rs  framework.rs  html_export.rs  hyper_decoding_graph.rs  hyper_model_graph.rs  invalid_subgraph.rs  lib.rs  main.rs  matrix_util.rs  model_hypergraph.rs  mwpf_solver.rs  mwps_solver.rs  old_parity_matrix.rs  ordered_float.rs  parity_matrix.rs  parity_matrix_visualize.rs  plugin.rs  plugin_blossom.rs  plugin_independent_single_hair.rs  plugin_single_hair.rs  plugin_union_find.rs  pointers.rs  primal_module.rs  primal_module_parallel.rs  primal_module_serial.rs  primal_module_union_find.rs  python_signal_checker.rs  (+10 more)
src/bp/: Cargo.toml
src/bp/src/: bp.rs  custom_rng.rs  gf2codes.rs  gf2sparse.rs  lib.rs  sparse_matrix_base.rs  sparse_matrix_util.rs
src/bp/tests/: bp_tests.rs
src/heapz/: Cargo.toml  LICENSE.md  README.md
src/heapz/.circleci/: config.yml
src/heapz/benches/: pairing_heap.rs  rank_pairing_heap.rs
src/heapz/src/: lib.rs  pairing_heap.rs  rank_pairing_heap.rs
src/heapz/src/utils/: bucket.rs  math.rs  mod.rs
src/heapz/tests/: linked.rs  ranked.rs
src/heapz/tests/common/: mod.rs
src/highs/: .gitignore
src/highs/src/: lib.rs
src/matrix/: basic.rs  basic_matrix.rs  complete.rs  echelon.rs  echelon_matrix.rs  hair.rs  interface.rs  matrix_interface.rs  mod.rs  parity_matrix.rs  row.rs  table.rs  tail.rs  tight.rs  tight_matrix.rs  visualize.rs  viz_table.rs
src/parity_matrix_new/: basic_matrix.rs  echelon_matrix.rs  matrix.rs  mod.rs  parity_matrix.rs  row.rs  table.rs
src/pheap/: rust-toolchain.toml
src/pheap/scripts/: dijkstra.py
src/pheap/src/: ph.rs
src/python/mwpf/: __init__.py  __main__.py  heralded_dem.py  ref_circuit.py  sinter_decoders.py
src/python/mwpf_rational/: __init__.py  __main__.py
src/slp/: Cargo.toml  LICENSE
src/slp/src/: common.rs  lib.rs  lp.rs  solver.rs
tests/python/: common.py  test_basic.py  test_corner_case_hypergraphs.py  test_debug_cases.py  test_erasure.py  test_floating_point_weight.py  test_heralded_dem.py  test_matrix.py  test_panic.py  test_pickle.py  test_ref_circuit.py  test_sinter.py  test_solver_config_backward_compatibility.py  test_visualize.py
tutorial/: book.toml
tutorial/src/: CHANGELOG.md  SUMMARY.md  developer-notes.md  installation.md  problem-definition.md
tutorial/src/demo/: demo.py  manual-dual-variable.ipynb  tutorial-matrix.ipynb  visualizer-usage.ipynb  visualizer-usage.md
visualize/: .prettierrc  README.md  __init__.py  compress_js.ts  demo_split.html  eslint.config.mjs  example_parity_matrix.html  gui3d copy.js  gui3d.js  index.html  index.js  package-lock.json  package.json  server.py  tsconfig.json  vite.config.ts
visualize/embedded/: .prettierrc  compress_js.ts  eslint.config.mjs  example_parity_matrix.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visualize/embedded/src/: main.ts  util.ts
visualize/embedded/src/hypergraph/: HyperGraph.vue
visualize/embedded/src/hyperion/: DualNode.vue  DualNodes.vue  Edges.vue  Hyperion.vue  Vertices.vue  config_pane.ts  html_export.ts  hyperion.ts  info_pane.ts  tp_plugins.css  tp_plugins.ts
visualize/embedded/src/hyperion/tp_plugins/: DualNodes.vue  Indices.vue
visualize/embedded/src/misc/: MyInstancedMesh.vue  util.ts
visualize/embedded/src/parity_matrix/: page_builder.ts  parity_matrix.ts  parser.ts
visualize/src/: main.ts  util.test.ts  util.ts
visualize/src/hypergraph/: hypergraph.ts
visualize/src/hyperion/: ClusterPlanes.vue  Edges.vue  Hyperion.vue  Vertices.vue  config_pane.ts  html_export.ts  hyperion.ts  info_pane.ts  store.ts
visualize/src/hyperion/equations/: EdgeDualSum.vue
visualize/src/hyperion/tp_plugins/: CurrentSelect.vue  DualNodes.vue  Indices.vue
visualize/src/misc/: MyInstancedMesh.vue  SharedRenderer.vue  cluster_polygon.test.ts  cluster_polygon.ts  util.ts
visualize/src/parity_matrix/: ParityMatrix.vue  page_builder.ts  parity_matrix.ts  parser.ts
