[package]
name = "mwpf"
version = "0.1.1"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Hypergraph Minimum-Weight Parity Factor (MWPF) Solver for Quantum LDPC Codes"
readme = "README.md"
homepage = "https://hyper-mwpf.com"
repository = "https://github.com/yuewuo/mwpf"
keywords = ["QEC", "quantum-computing", "error-correction", "visualization"]
categories = ["science"]
exclude = ["tutorial/*", "benchmark/*", "visualize/data/persist/*", ".github/*"]
default-run = "mwpf"

# see https://doc.rust-lang.org/1.39.0/cargo/reference/manifest.html#the-documentation-field-optional
[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "mwpf"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "mwpf"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# profiling: see scripts/NOTES.md

# embed debug symbols
[profile.release]
debug = true

[features]
# to enable a feature, use `--features xxx`
default = ["f64_weight", "cli", "qecp_integrate", "slp", "pq", "unsafe_pointer"] 
old_default = ["cli", "slp"]
cli = ["pbr"]
r64_weight = []                                   # use Rational64 instead of BigRational as weight type
f64_weight = ["float_lp"]                         # use f64 instead of BigRational as weight type
f32_weight = ["float_lp"]                         # use f64 instead of BigRational as weight type
u32_index = []                                    # use u32 instead of usize as index type, to save memory
python_binding = ["pyo3"]                         # bind to Python
wasm_binding = ["wasm-bindgen"]                   # bind to wasm
colorful = []                                     # enable colorful output in case terminal exists
qecp_integrate = ["qecp"]
float_lp = ["highs"]
incr_lp = []
pq = []                                           # use edge/vertex definitions in dual_module_pq 
non-pq = []                                       # use edge/vertex definitions in dual_module_serial
unsafe_pointer = []                               # use raw pointers to access data without lock when appropriate;

[dependencies]
pyo3 = { version = "0.19.2", features = [
    "extension-module",
    "multiple-pymethods",
    "abi3-py37",
    "num-bigint",
], optional = true }
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.59"
chrono = "0.4.19"
urlencoding = "2.1.0"
clap = { version = "4.2.7", features = ["cargo", "derive"] }
pbr = { version = "1.0.4", optional = true }
rand_xoshiro = "0.6.0"
derivative = "2.2.0"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
num-rational = "0.4.1"
num-traits = "0.2.15"
more-asserts = "0.3.1"
rand = { version = "0.8.5", features = ["small_rng"] }
prettytable-rs = "0.10.0"
itertools = "0.11.0"
cfg-if = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.86", optional = true }
lazy_static = "1.4.0"
slp = { path = "src/slp", optional = true }
highs = { path = "src/highs", optional = true }
sugar = "0.2.0"
maplit = "1.0.2"
qecp = { version = "0.2.5", optional = true, default-features = false, features = [
    "fusion_blossom",
] }
serde_variant = "0.1.3"
priority-queue = "2.0.3"
heapz = { path = "src/heapz" }
hashbrown = "0.14.5"
pheap = { path = "src/pheap" }
rayon = "1.7.0"
weak-table = "0.3.2"
petgraph = { version = "0.6.0", features = ["serde-1"] }
core_affinity = "0.8.0"
color-print = "0.3.6"
jemallocator = "0.5.4"

[dev-dependencies]
test-case = "3.1.0"

[package.metadata.docs.rs]
# to run locally: `RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps`
rustdoc-args = ["--html-in-header", "katex-header.html"]