[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mwpf"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]

[project.optional-dependencies]
stim = ["frozendict", "frozenlist", "numpy", "stim>=1.14.0", "sinter>=1.14.0"]

[tool.maturin]
no-default-features = true
features = [
    "python_binding",
    "f64_weight",
    "embed_visualizer",
    "qecp_integrate",
    "loose_sanity_check",
]
bindings = "pyo3"
cargo-extra-args = "--no-default-features --features python_binding,f64_weight,embed_visualizer,qecp_integrate,loose_sanity_check"
python-source = "src/python"

[[tool.mypy.overrides]]
allow_redefinition = true
module = ["mwpf.*", "stim.*", "sinter.*", "mwpf_rational.*", "tqdm.*"]
follow_untyped_imports = true
ignore_missing_imports = true
implicit_reexport = true
