[badges.maintenance]
status = "deprecated"
[dependencies.num]
version = "0.4.1"

[dependencies.pest]
version = "2.1"

[dependencies.pest_derive]
version = "2.1"

[dependencies.rayon]
version = "1.4"

[dependencies.structopt]
version = "0.3"

[package]
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
categories = ["science"]
description = "Linear Programming Solver\n"
documentation = "https://docs.rs/slp/"
edition = "2018"
exclude = ["/.vscode/", "/.github/"]
homepage = "https://docs.rs/crate/slp/"
keywords = ["Optimization", "Linear", "Programming", "Solver", "Math"]
license = "MIT"
name = "slp"
readme = "README.md"
repository = "https://github.com/solhop/slp"
version = "0.1.11"