[badges.maintenance]
status = "deprecated"
[dependencies.num-traits]
version = "0.2.15"

[dependencies.pest]
version = "2.1"

[dependencies.pest_derive]
version = "2.1"

[dependencies.rayon]
version = "1.4"

[dependencies.structopt]
version = "0.3"

[dependencies.num-rational]
version = "0.4.1"

[dependencies.num-bigint]
version = "0.4.5"

[package]
authors = ["Prateek Kumar <prateek@prateekkumar.in>"]
categories = ["science"]
description = "Linear Programming Solver\n"
documentation = "https://docs.rs/slp/"
edition = "2018"
exclude = ["/.vscode/", "/.github/"]
homepage = "https://docs.rs/crate/slp/"
keywords = ["Optimization", "Linear", "Programming", "Solver", "Math"]
license = "MIT"
name = "slp"
readme = "README.md"
repository = "https://github.com/solhop/slp"
version = "0.2.0"

[lib]
name = "slp"
path = "src/lib.rs"
